--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,21 @@
             <span>nav1</span>
             <span>nav2</span>
             <span>nav3</span>
-            <span>nav4</span>
+            {% if not user.is_authenticated %}
+            <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
+                <span>login</span>
+            </a>
+            {% else %}
+            <form action="{% url 'accountapp:logout' %}" method="POST" style="display: inline;">
+                {% csrf_token %}
+                <input type="hidden" name="next" value="{{ request.path }}">
+                <button type="submit" style="background: none; border: none; color: blue; cursor: pointer;">
+                    logout
+                </button>
+            </form>
+            {% endif %}
+
+
         </div>
 
     </div>
