django course 23 commit

--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %}
-
+{% load bootstrap4 %}
 {% block content %}
 
-    <div style="text-align: center">
+    <div style="text-align: center; max-width: 500px; margin: 4rem auto">
         <div>
             <h4>Login</h4>
         </div>
         <div>
             <form action="" method="post">
                 {% csrf_token %}
-                {{ form }} <!--회원가입과 마찬가지로, 미리 명시해둔 폼이 들어올 자리-->
-                <input type="submit" class="btn btn-primary">
+                <!-- {{ form }} 회원가입과 마찬가지로, 미리 명시해둔 폼이 들어올 자리-->
+                {% bootstrap_form form %}
+                <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
             </form>
         </div>
     </div>
