django course 24 commit

--- a/templates/header.html
+++ b/templates/header.html
@@ -12,6 +12,9 @@
                 <span>login</span>
             </a>
             {% else %}
+            <a href="{% url 'accountapp:detail' pk=user.pk %}">
+                <span>MyPage</span>
+            </a>
             <form action="{% url 'accountapp:logout' %}" method="POST" style="display: inline;">
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ request.path }}">
