--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -8,7 +8,7 @@
         Change Info
       </h4>
     </div>
-    <form action="{% url 'accountapp:update' pk=user.pk %}" method = "post"> <!-- account/블라블라 이런식으로 경로지정이 아니라 앱명:기능이름 이런식으로 -->
+    <form action="{% url 'accountapp:update' pk=target_user.pk %}" method = "post"> <!-- account/블라블라 이런식으로 경로지정이 아니라 앱명:기능이름 이런식으로 -->
       {% csrf_token %} <!-- post를 사용하기위해선 csrf를 꼭 넣어야함  -->
       {% bootstrap_form form %} <!-- account:create에 지정해둔 form을 여기서 사용 -->
       <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
